--- a/components/footer.html
+++ b/components/footer.html
@@ -19,8 +19,8 @@
 
     <div>
       <h4>Contact</h4>
-      <p>📞 +91 XXXXXXXXXX</p>
-      <p>✉️ info@luminorrenergy.com</p>
+      <p>📞 +91 9105016695</p>
+      <p>✉️ info@luminorr.com</p>
     </div>
 
   </div>
